<resources>
    <string name="ballon1">Ballon 1</string>
    <string name="ballon2">Ballon 2</string>
    <string name="ballon3">Ballon 3</string>
    <string name="ballon4">Ballon 4</string>
    <string name="ballon5">Ballon 5</string>
    <string name="ballon6">Ballon 6</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="end">end</string>
    <string name="shoot">shoot</string>
    <string name="start">start</string>
    <string name="Resume">Resume</string>
    <string name="Stats">Stats</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="bomb">bomb</string>
    <string name="gun">gun</string>
    <string name="rocket">rocket</string>
    <string name="mystats">MyStats</string>
    <string name="practice_mode">Practice mode</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="password">Password</string>
    <string name="Easy">Easy</string>
    <string name="Moderate">Moderate</string>
    <string name="Hard">Hard</string>
    <string name="welcome_to_hang_man_please_choose_the_desired_level_of_difficulty">Welcome to Hang Man! Please choose the desired level of difficulty:</string>
    <string name="the_image_of_six_balloons">the image of six balloons</string>
    <string name="the_image_of_five_balloons">the image of five balloons</string>
    <string name="the_image_of_four_balloons">the image of four balloons</string>
    <string name="the_image_of_three_balloons">the image of three balloons</string>
    <string name="the_image_of_two_balloons">the image of two balloons</string>
    <string name="the_image_of_one_balloon">the image of one balloon</string>
    <string name="character_a">character A</string>
    <string name="character_b">character B</string>
    <string name="character_c">character C</string>
    <string name="character_d">character D</string>
    <string name="character_e">character E</string>
    <string name="character_f">character F</string>
    <string name="the_coin_icon">the coin icon</string>
    <string name="the_hint_icon">the hint icon</string>
    <string name="_0">0</string>
    <string name="score">Score:</string>
    <string name="hint">Hint</string>
    <string name="choose_your_character">Choose your character:</string>
    <string name="instruction">Welcome to Tower Defense!\n In this game, you will have the opportunity
    to earn three badges: adventurous badge, fortunate badge and strategic badge.\n
    If you have played more than 5 games and encountered the final dragon, you might win the adventurous badge.\n
    If you have accumulated more than 200 in cash, you will win the fortunate badge.\n
    The strategic badge we leave to you to explore!\n\n
    Click on me to start the game!</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="you_win">You Win</string>
    <string name="save_and_go_to_menu">Save and Go To Menu</string>
    <string name="the_image_of_char_e">the_image_of_char_e</string>
    <string name="the_image_of_char_d">the_image_of_char_d</string>
    <string name="the_image_of_char_c">the_image_of_char_c</string>
    <string name="the_image_of_char_b">the_image_of_char_b</string>
    <string name="the_image_of_char_a">image of char a</string>
    <string name="the_image_of_char_f">image of char f</string>
    <string name="invaders">Invaders</string>
    <string name="space">Space</string>
    <string name="defense">Defense</string>
    <string name="tower">Tower</string>
    <string name="the_image_of_hangman_avatar">image of hangman avatar</string>
    <string name="the_image_of_tower_defense_avatar">image of tower defense avatar</string>
    <string name="the_image_of_ufo_avatar">image of ufo avatar</string>
    <string name="hang_man">Hang Man</string>
    <string name="fortune_badges">Fortune Badges</string>
    <string name="the_image_of_fortune_badge">Image of Fortune Badge</string>
    <string name="the_image_of_strategic_badge">image of strategy badge</string>
    <string name="the_image_of_adventurous_badge">image of adventure badge</string>
    <string name="your_badges">Your Badges</string>
    <string name="strategic_badges">Strategic Badges</string>
    <string name="adventurous_badges">Adventurous Badges</string>
    <string name="rocket_50">rocket 50</string>
    <string name="gun_40">gun 40</string>
    <string name="bomb_60">bomb 60</string>
    <string name="your_statistics">Your Statistics</string>
    <string name="games_played">Games Played</string>
    <string name="user_level">User Level</string>
    <string name="highest_score">Highest Score</string>
    <string name="current_score">Current Score</string>
    <string name="view_badges">View Badges</string>
    <string name="collection">Collection</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="quit">Quit</string>


</resources>
