<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameManager.MenuActivity">

    <Button
        android:id="@+id/practice"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="practiceMode"
        android:text="@string/practice_mode"
        app:layout_constraintBottom_toTopOf="@+id/scoreBoard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Stats" />

    <Button
        android:id="@+id/Resume"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/Resume"
        app:layout_constraintBottom_toTopOf="@+id/Stats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />

    <Button
        android:id="@+id/Stats"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="goToStatsheet"
        android:text="@string/mystats"
        app:layout_constraintBottom_toTopOf="@+id/practice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resume" />

    <Button
        android:id="@+id/start"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        app:layout_constraintBottom_toTopOf="@+id/Resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scoreBoard"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:onClick="toScoreBoard"
        android:text="@string/scoreboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/practice" />
</androidx.constraintlayout.widget.ConstraintLayout>