<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hm_backgroud">


    <Button
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="68dp"
        android:text="@string/Easy"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/moderateButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/moderateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginBottom="72dp"
        android:text="@string/Moderate"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/hardButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginBottom="188dp"
        android:text="@string/Hard"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="88dp"
        android:text="@string/welcome_to_hang_man_please_choose_the_desired_level_of_difficulty"
        app:layout_constraintBottom_toTopOf="@+id/easyButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>